Added Footer and centered it and padded it

--- a/client/src/components/Footer/Footer.style.scss
+++ b/client/src/components/Footer/Footer.style.scss
@@ -2,4 +2,12 @@
   width: 100%;
   background-color: black;
   color: white;
+  text-align: center;
+}
+
+div {
+  padding-top: 10px;
+  padding-right: 0px;
+  padding-bottom: 10px;
+  padding-left: 0px;
 }
