--- a/client/src/pages/Home/Home.style.scss
+++ b/client/src/pages/Home/Home.style.scss
@@ -12,4 +12,18 @@
       color: inherit;
     }
   }
+  
+  @keyframes effect {
+    0% {
+        background: linear-gradient(
+                #008000, #00FF00);
+        -webkit-background-clip: text;
+    }
+
+    100% {
+        background: linear-gradient(
+                #3CE7D7, #000FFF);
+        -webkit-background-clip: text;
+    }
+}
 }
