Responsive Home PAge Products

--- a/client/src/pages/Home/Home.style.scss
+++ b/client/src/pages/Home/Home.style.scss
@@ -5,7 +5,9 @@
 
   &__products {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 1rem;
 
     a {
       text-decoration: none;
