Updated how products look like

--- a/client/src/components/ProductPreviewCard/ProductPreviewCard.style.scss
+++ b/client/src/components/ProductPreviewCard/ProductPreviewCard.style.scss
@@ -1,11 +1,11 @@
 .product-preview-card {
   &__title {
-    font-style: bold;
-    color: green;
+    font-style: oblique;
+    color: rgb(0, 0, 0);
   }
 
   &__description {
-    color: blue;
+    color: rgb(59, 59, 59);
   }
 
   &__image {
