--- a/client/src/components/Navbar/Navbar.style.scss
+++ b/client/src/components/Navbar/Navbar.style.scss
@@ -23,10 +23,11 @@
 }
 
 .button {
- background-color: black;
- height: fit-content;
- color: white; 
- border-radius: 4px;
+ background-color: rgb(88, 88, 88);
+ margin-right: 25px;
+ height: 25px;
+ color: rgb(255, 255, 255); 
+ border-radius: 3px;
  outline: none;
  border: none;
 }
