--- a/client/src/pages/Home/Home.style.scss
+++ b/client/src/pages/Home/Home.style.scss
@@ -29,3 +29,11 @@
     }
 }
 }
+
+@media (prefers-color-scheme: dark) {
+  .home-page__title {
+    color: white;
+    background: rgb(60, 60, 60);
+    outline: 1px dashed #000;
+  }
+}
